--- a/styles/Responsive.css
+++ b/styles/Responsive.css
@@ -165,7 +165,10 @@ display: block!important;
         transition: 0.3s ease;
         z-index: 1000;
     }
-
+    .navitem {
+        margin-top: 0px!important;
+        margin-bottom: 0px!important;
+    }
     #sidebar.show {
         left: 0;
     }
@@ -220,7 +223,7 @@ display: block!important;
     #sidebar {
         left: 0;
         width: 25%; /* Default width for larger screens */
-        position: relative;
+        position: sticky;
     }
 
     .toggle-btn {
@@ -234,6 +237,7 @@ display: block!important;
     .smob{
         display: none!important;
     }
+    
  
   
 }
