--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
-    margin     : 0;
-    padding    : 0;
-    box-sizing : border-box;
-    font-family: "Merriweather", serif;
-
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 #navbar {
